--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^6.1.4",
     "@mui/material": "^6.1.4",
     "@mui/styled-engine-sc": "^6.1.4",
+    "framer-motion": "^11.11.11",
     "katex": "^0.16.11",
     "mathjax-react": "^2.0.1",
     "react": "^18.3.1",
@@ -23,6 +24,7 @@
     "react-latex-next": "^3.0.0",
     "react-markdown": "^9.0.1",
     "react-router-dom": "^6.27.0",
+    "react-window": "^1.8.10",
     "reactjs-flip-card": "^2.0.3",
     "rehype-katex": "^7.0.1",
     "remark-math": "^6.0.0",
